# cookiecutter-pypackage

./: .buildinfo  README.rst  appveyor.yml  console_script_setup.html  cookiecutter.json  genindex.html  index.html  invoke.html  objects.inv  prompts.html  pypi_release_checklist.html  pyproject.toml  readme.html  search.html  searchindex.js  tasks.py  travis_pypi_setup.html  tutorial.html
.doctrees/: console_script_setup.doctree  environment.pickle  index.doctree  invoke.doctree  prompts.doctree  pypi_release_checklist.doctree  readme.doctree  travis_pypi_setup.doctree  tutorial.doctree
docs/: conf.py  console_script_setup.rst  index.rst  prompts.rst  tutorial.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .gitlab-ci.yml  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tasks.py  tox.ini  {% if cookiecutter.use_pylint == 'y' -%} .pylintrc {%- endif %}
{{cookiecutter.project_slug}}/.github/workflows/: main.yml
{{cookiecutter.project_slug}}/docs/: installation.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
